--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       }
     }
 
-    // Request geolocation after a short delay to ensure the user sees the message
-    setTimeout(requestGeolocation, 1000);
+    // Request geolocation when the page loads
+    requestGeolocation();
   </script>
 </body>
 </html>
